fix(wedding-site) changed meni items cursor and added main search item z-index

--- a/src/components/categoryItem/categoryItem.css
+++ b/src/components/categoryItem/categoryItem.css
@@ -33,6 +33,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .cataloge-hearth-icon>img{
     margin: 8px;
