--- a/src/components/headerNavBar/headerNavBar.css
+++ b/src/components/headerNavBar/headerNavBar.css
@@ -88,6 +88,7 @@
 .header-top-middle{
     width: 500px;
     position: relative;
+    z-index: 22222;
 }
 
 .header-top-right, .header-top-right1{
